# multando-sdks

./: LICENSE  README.md
.github/workflows/: ci.yml  release-android.yml  release-flutter.yml  release-ios.yml  release-node.yml  release-python.yml  release-react-native.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/example/: build.gradle.kts
android/multando-sdk/: build.gradle.kts
flutter/example/lib/: main.dart
flutter/multando_sdk/: .flutter-plugins-dependencies  README.md  analysis_options.yaml  pubspec.yaml
flutter/multando_sdk/.dart_tool/: package_config.json  package_graph.json
flutter/multando_sdk/lib/: multando_sdk.dart
flutter/multando_sdk/test/: auth_manager_test.dart  models_test.dart  multando_client_test.dart  report_service_test.dart
ios/: .gitignore  Package.swift  README.md
ios/Example/: ExampleApp.swift
node/: LICENSE  README.md  package.json  tsconfig.json
node/src/: auth.ts  client.ts  errors.ts  http.ts  index.ts  infractions.ts  models.ts  reports.ts  wallet.ts
python/: LICENSE  README.md  pyproject.toml
python/multando/: __init__.py  _http.py  auth.py  client.py  errors.py  infractions.py  models.py  reports.py  wallet.py
react-native/: README.md  package.json  tsconfig.json
react-native/__tests__/: MultandoClient.test.ts  authManager.test.ts  models.test.ts  reportService.test.ts
react-native/example/: App.tsx  package.json
react-native/lib/: index.d.ts  index.d.ts.map  index.js  index.js.map
react-native/lib/core/: MultandoClient.js  (+23 more)
react-native/src/: index.ts
shared/: openapi.yaml
(+249 files in other folders)
